# flight-streaming-pipeline

./: .gitignore  FlightOTPDashboard.spec  README.md  build_exe.bat  dashboard.py  launcher.py  pyproject.toml  requirements.txt
src/: __init__.py
src/catalog/: iceberg_catalog.py
src/generators/: flight_generator.py  models.py
src/ingestion/: arrow_loader.py
src/streaming/: json_stream.py
tests/: conftest.py
tests/feature_1_data_generation/: test_flight_generator.py
tests/feature_2_json_streaming/: test_json_stream.py
tests/feature_3_arrow_ingestion/: test_arrow_loader.py
tests/feature_4_iceberg_catalog/: test_iceberg_catalog.py
tests/feature_5_e2e_regression/: test_e2e_pipeline.py
