[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-streaming-pipeline"
version = "0.1.0"
description = "Flight arrival/departure streaming pipeline: DataDesigner -> JSON Stream -> Arrow -> DuckDB -> Iceberg"
requires-python = ">=3.10"
dependencies = [
    "nemo-curator[all]>=0.5.0",
    "pyarrow>=15.0.0",
    "duckdb>=1.1.0",
    "pyiceberg[duckdb]>=0.7.0",
    "pydantic>=2.0.0",
    "faker>=28.0.0",
]

[project.optional-dependencies]
dashboard = [
    "marimo>=0.19.0",
    "plotly>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "feature_1: Data generation tests",
    "feature_2: JSON streaming tests",
    "feature_3: Arrow ingestion tests",
    "feature_4: Iceberg catalog tests",
    "feature_5: End-to-end regression tests",
]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
